--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 :root {
   --yellow: #f5c32c;
   --orange: #fca61f;
+  --blackgray: #2b2a29;
   --black: #242d49;
   --gray: rgba(36, 45, 73, 0.65);
   --profileShadow: 0px 4px 17px 2px rgba(0, 0, 0, 0.25);
   --hrColor: #cfcdcd;
   --cardColor: rgba(255, 255, 255, 0.64);
-  --buttonBg: linear-gradient(98.63deg, #f9a225 0%, #f95f35 100%);
+  --buttonBg: linear-gradient(98.63deg, #2b2a2a 0%, #7e7c7b 100%);
   --inputColor: rgba(40, 52, 62, 0.07);
   --photo: #4CB256;
   --video: #4A4EB7;
@@ -28,4 +29,21 @@
   border-radius: 50%;
   background: #a6ddf0;
   filter: blur(72px)
+}
+.button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  border: none;
+  border-radius: 0.5rem;
+  background: var(--buttonBg);
+  transition: all 100ms ease-out;
+}
+
+.button:hover{
+ cursor: pointer;
+ color: var(--blackgray);
+ background: transparent;
+ border: 2px solid var(--blackgray);
 }
